--- a/style.css
+++ b/style.css
@@ -39,9 +39,10 @@ body {
 }
 
 header {
-   background-color: var(--accent-color);
+    background-color: var(--accent-color);
     padding: 1rem 0;
 }
+
 header nav {
     display: flex;
     justify-content: space-between;
@@ -59,9 +60,11 @@ header nav {
     border: 0;
 
 }
+
 main {
     padding: 3rem 0;
 }
+
 .user-input {
     margin-bottom: 4rem;
     display: flex;
@@ -70,7 +73,7 @@ main {
     gap: 1rem;
 }
 
-.user-input .search-box{
+.user-input .search-box {
     background-color: var(--accent-color);
     box-shadow: 0 0 5px var(--shadow-color);
     outline: 1px solid var(--main-bg-color);
@@ -81,12 +84,13 @@ main {
     padding: 0 1rem;
 }
 
-.user-input .search-box input, .user-input .search-box select {
-   
+.user-input .search-box input,
+.user-input .search-box select {
+
     background-color: var(--accent-color);
     color: var(--text-color);
-   padding: .75rem;
-    
+    padding: .75rem;
+
 }
 
 .user-input .search-box input {
@@ -100,13 +104,14 @@ main {
     border: 0;
     outline: 1px solid var(--main-bg-color);
 }
+
 .country-list-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 4rem;
 }
 
-.country-list-container .country-item{
+.country-list-container .country-item {
     cursor: pointer;
     background-color: var(--accent-color);
     color: var(--text-color);
@@ -120,7 +125,8 @@ main {
     width: 100%;
     height: 180px;
     object-fit: cover;
-    margin-bottom: 1rem; ;
+    margin-bottom: 1rem;
+    ;
 }
 
 .country-list-container .country-item .country-quick-info {
@@ -131,10 +137,129 @@ main {
 .country-list-container .country-item .country-quick-info h2 {
     margin-bottom: 1rem;
 }
+
 .country-list-container .country-item .country-quick-info p {
     margin-bottom: .5rem;
 }
 
-.country-details {
+.country-detail-container {
     display: none;
+}
+
+.country-detail-container.show {
+    display: block;
+}
+
+.country-detail-container .back-btn {
+    cursor: pointer;
+    background-color: var(--accent-color);
+    color: var(--text-color);
+    padding: .5rem 2rem;
+    border: 0;
+    margin-bottom: 4rem;
+}
+
+.country-detail-container .country-information {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 4rem;
+}
+
+.country-detail-container .country-information .country-flag img {
+    width: 100%;
+    height: 350px;
+    object-fit: cover;
+}
+
+.country-detail-container .country-information .country-details h1 {
+    margin-bottom: 1.5rem 0 2rem 0;
+
+}
+
+.country-detail-container .country-information .country-details ul {
+    margin-bottom: 4rem;
+    columns: 2;
+}
+
+.country-detail-container .country-information .country-details ul li {
+    margin-bottom: .5rem;
+}
+
+.country-detail-container .country-information .country-details .country-borders strong {
+    margin-right: .5rem;
+    ;
+}
+
+.country-detail-container .country-information .country-details .country-borders span {
+    background-color: var(--accent-color);
+    padding: .25rem 1.25rem;
+}
+
+
+@media screen and (max-width: 1024px) {
+    .container {
+        width: 80%;
+    }
+    .country-list-container {
+        grid-template-columns: 1fr 1fr;
+        gap: 2rem;
+    }
+    
+}
+
+@media screen and (max-width: 768px) {
+    .container {
+        width: 90%;
+    }
+    .country-list-container {
+        grid-template-columns: 1fr;
+        gap: 2rem;
+    }
+    .user-input {
+        flex-direction: column;
+        gap: 2rem;
+        margin-bottom: 2rem;
+    }
+    .user-input .search-box {
+        display: flex;
+        align-items: center;
+    
+    }
+    .user-input .search-box input {
+        width: 100%;
+    }
+    .country-detail-container .country-information {
+        grid-template-columns: 1fr;
+    }
+    .country-detail-container .country-information .country-details ul {
+        columns: 1;
+    }
+    .country-detail-container .country-information .country-details .country-borders strong {
+        display: block;
+        margin-bottom: 1rem;
+    }
+    .country-detail-container .country-information .country-details .country-borders span {
+        display: inline-block;
+        margin: 0 0 .5rem 0 ;
+
+    }
+
+}
+
+@media (max-width: 540px) {
+   .container {
+        width: 85%;
+    }
+   .header {
+    font-size: .75rem;
+   }
+   .dark-mode-btn {
+        font-size: .9rem;
+    
+    }
+    .country-list-container {
+        grid-template-columns: 1fr;
+        gap: 2rem;
+
+    }
 }
